// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RegistryImageWidget > renders a file widget component with value 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="file-widget-dropzone"
            tabindex="0"
          >
            <img
              class="ui small image image-preview"
              id="field-my-field-image"
              src="http://localhost:3000/@@site-logo/logo.cab945d8.svg"
            />
            <label
              class="label-file-widget-input"
            >
              Replace existing file
            </label>
            <input
              autocomplete="off"
              id="field-my-field"
              multiple=""
              name="my-field"
              style="display: none;"
              tabindex="-1"
              type="file"
            />
          </div>
          <div
            class="field-file-name"
          >
            <button
              aria-label="delete file"
              class="ui basic icon button delete-button"
            >
              <svg
                class="icon"
                style="height: 20px; width: auto; fill: currentColor;"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegistryImageWidget > renders an empty file widget component 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="field-file-name"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
